# XML-to-JSON-project

./: .gitignore  README.md  project.cpp
XML-to-JSON/: .gitignore  CMakeLists.txt
XML-to-JSON/CLI/: CMakeLists.txt  CMakePresets.json  main.cpp  outputFile.json
XML-to-JSON/GUI/: CMakeLists.txt  CMakePresets.json  ErrorHighlighter.cpp  ErrorHighlighter.h  adapter.cpp  adapter.h  graphwindow.cpp  graphwindow.h  graphwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
XML-to-JSON/common/: LinkedList.cpp  LinkedList.h  Tree.cpp  Tree.h  adapter.cpp  adapter.h  compress-decompress.cpp  compress-decompress.h  compress.cpp  convert.cpp  graph.cpp  graph.h  netanalysis.cpp  prettierfunc.cpp  validation.cpp  validation.h
XML-to-JSON/src/Backend/: Tree.h  convert.cpp  main.cpp  prettierfunc.cpp  validation.cpp  validation.h
XML-to-JSON/src/Frontend/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
XML-to-JSON/tests/: CMakeLists.txt  sample.xml  sample_graph.xml  sample_val.xml  test_graph.cpp  test_graph_image.cpp  test_tree.cpp  test_validation.cpp
src/Backend/: Tree.cpp  Tree.h  convert.cpp  prettierfunc.cpp  sample.xml  validation.cpp  validation.h  verify 2 .cpp
